Fix small cover photo border alignment issue

--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -27,7 +27,7 @@
   background-repeat: no-repeat;
   background-color: gray;
   position: absolute;
-  width: 851px;
+  width: 850px;
   overflow: hidden;
   height: 315px;
   object-fit: cover;
